# beemesh

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.machine  GTM.md  Makefile  NETWORKING.md  README.md  RESEARCH.md  demo_networking.sh  deploy.md  go.mod  go.mod.new  gtm.md  machineplane-spec.md  main.go  technical-spec.md  test_networking.go  validate_implementation.sh  workplane-spec.md
bmctl/: Cargo.toml
bmctl/src/: lib.rs  main.rs
kubectl/: Cargo.toml
kubectl/src/: flatbuffer_envelope.rs  main.rs
machineplane/: .dockerignore  Cargo.toml  DISTRIBUTE_MANIFEST_STATUS.md  Dockerfile  MACHINE_PLANE_REBALANCING.md  README.md  architecture_violations.md  build.rs  machineplane-scheduler-spec.md  machineplane-spec.md  tasks.md
machineplane/.github/: copilot-instructions.md
machineplane/.github/prompts/: check-architecture-violations.prompt.md  check-dry-violations.prompt.md
machineplane/cli/: Cargo.toml
machineplane/cli/src/: flatbuffer_envelope.rs  flatbuffers.rs  lib.rs  main.rs
machineplane/crypto/: Cargo.toml
machineplane/crypto/src/: envelope.rs  envelope_validator.rs  flatbuffer_envelope.rs  keypair_manager.rs  keystore.rs  keystore_helper.rs  lib.rs  logging.rs
machineplane/deploy/: README.md  machine-pod.yaml  machine.yml
machineplane/docs/: MULTI_ENGINE_ARCHITECTURE.md  WORKLOAD_DEPLOYMENT_PLAN.md  resource_verification.md
machineplane/machine/: Cargo.toml
machineplane/machine/src/: lib.rs  main.rs  pod_communication.rs  resource_verifier.rs  workload_integration.rs  workload_manager.rs  workload_manager_test.rs
machineplane/machine/src/cli_api/: flatbuffer_envelope.rs  flatbuffers.rs  mod.rs
machineplane/machine/src/hostapi/: mod.rs
machineplane/machine/src/libp2p_beemesh/: capacity.rs  constants.rs  dht_helpers.rs  dht_manager.rs  dht_usage_example.rs  envelope.rs  error_helpers.rs  manifest_announcement.rs  manifest_fetch.rs  manifest_store.rs  mod.rs  reply.rs  request_response_codec.rs  security.rs  utils.rs  versioning.rs
machineplane/machine/src/provider/: announcements.rs  mod.rs
machineplane/machine/src/restapi/: envelope_handler.rs  kube.rs  mod.rs
machineplane/machine/src/runtime/: mock.rs  mod.rs
machineplane/machine/tests/: applied_manifest_tests.rs  capability_holder_signature_test.rs  distribute_manifest_test.rs  envelope_verification_test.rs  error_handling_test.rs  in_memory_apply.rs  keyshare_handler_test.rs  rest_api_envelope_test.rs  security_tests.rs
machineplane/protocol/: Cargo.toml  build.rs
machineplane/protocol/schema/machine/: applied_manifest.fbs  apply_manifest_request.fbs  apply_manifest_response.fbs  apply_request.fbs  assign_request.fbs  assign_response.fbs  capability_token.fbs  capacity_reply.fbs  delete_request.fbs  delete_response.fbs  distribute_manifests_request.fbs  distribute_manifests_response.fbs  encrypted_manifest.fbs  envelope.fbs  health.fbs  key_shares.fbs  keyshare_request.fbs  keyshare_response.fbs  manifest_fetch.fbs  task_status_response.fbs
machineplane/protocol/src/: lib.rs  libp2p_constants.rs
machineplane/protocol/src/json/: mod.rs
machineplane/protocol/tests/: envelope_test.rs  fb_envelope_helper_test.rs  json_canonicalization_test.rs  json_canonicalization_values.rs
machineplane/scheduler/: Cargo.toml
machineplane/scheduler/src/: lib.rs
machineplane/schema/machine/: candidates_response.fbs  capacity_reply.fbs  capacity_request.fbs  handshake.fbs  nodes_response.fbs  task_create_response.fbs
machineplane/src/: capacity.rs  lib.rs  main.rs  messages.rs  placement.rs  pod_communication.rs  resource_verifier.rs  run.rs  runtime.rs  scheduler.rs  signatures.rs  workload_integration.rs
machineplane/src/api/: kube.rs  mod.rs
machineplane/src/crypto/: envelope_validator.rs  flatbuffer_envelope.rs  keypair_manager.rs  logging.rs  mod.rs
machineplane/src/libp2p_beemesh/: dht_manager.rs  envelope.rs  mod.rs  reply.rs  security.rs  utils.rs
machineplane/src/libp2p_beemesh/behaviour/: delete_message.rs  gossipsub_message.rs  handshake_message.rs  message_verifier.rs  scheduler_message.rs
machineplane/src/libp2p_beemesh/control/: mod.rs  (+3 more)
machineplane/src/messages/: constants.rs  mod.rs  signatures.rs  types.rs
machineplane/src/network/: behaviour.rs  capacity.rs  control.rs  dht_manager.rs  envelope.rs  mod.rs  reply.rs  request_response_codec.rs  security.rs  utils.rs
machineplane/src/protocol/: libp2p_constants.rs  mod.rs
machineplane/src/provider/: discovery.rs
machineplane/src/restapi/: envelope_handler.rs  kube.rs  mod.rs
machineplane/src/runtime/: mock.rs
machineplane/src/runtimes/: mock.rs  mod.rs  podman.rs  podman_api.rs
machineplane/tests/: Cargo.toml  applied_manifest_tests.rs  apply_common.rs  apply_tests.rs  cli_env_test.rs  cli_tests.rs  envelope_verification_test.rs  error_handling_test.rs  integration_test.rs  integration_test_apply.rs  integration_test_delete.rs  integration_test_disable_scheduling.rs  kube_helpers.rs  manifest_tests.rs  mesh_tests.rs  rest_api_envelope_test.rs  runtime_helpers.rs  scheduler_tests.rs  test-spec.md  test_utils.rs
machineplane/tests/sample_manifests/: nginx  nginx.yml  nginx_with_replicas.yml
machineplane/tests/src/: lib.rs
machineplane/tests/test_utils/: mod.rs
machineplane/tests/tests/: apply_common.rs  integration_test.rs  integration_test_apply.rs  integration_test_delete.rs  integration_test_disable_scheduling.rs  keystore_shared_test.rs  kube_helpers.rs
shared/crypto/: Cargo.toml
shared/crypto/src/: keypair_manager.rs
shared/protocol/: Cargo.toml  build.rs
shared/protocol/src/: lib.rs
shared/protocol/tests/: envelope_test.rs
workplane/: Cargo.toml  README.md  workplane-spec.md
workplane/golang/: Dockerfile  go.mod
workplane/internal/common/: crypto.go
workplane/internal/machine/: scheduler.go
workplane/src/: agent.rs  config.rs  discovery.rs  lib.rs  main.rs  manifest.rs  metrics.rs  network.rs  raft.rs  rpc.rs  self_heal.rs  selfheal.rs  streams.rs  task.rs  tender.rs  workload.rs
workplane/tests/: discovery_tests.rs  selfheal_tests.rs  test-spec.md
(+103 files in other folders)
