[package]
name = "bmctl"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for beemesh"

[lib]
name = "bmctl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
machine = { path = "../machineplane/machine" }

[[bin]]
name = "bmctl"
path = "src/main.rs"
