[workspace.dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
saorsa-pqc = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }