[package]
name = "beemesh-machineplane"
version = "0.1.0"
edition = "2024"
# build script removed – no FlatBuffers generation needed
description = "Beemesh machineplane daemon"

[lib]
name = "machine"
path = "src/lib.rs"

[[bin]]
name = "machine"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["env"] }
once_cell = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
reqwest = { workspace = true }
zeroize = "1.5"
bincode = "1.3"
sha2 = "0.10"

[dev-dependencies]
serial_test = "3.0"
