[package]
name = "workplane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4.5", features = ["derive"] }
libp2p = { version = "0.53", default-features = false, features = ["identity"] }
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
