[package]
name = "workplane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
libp2p = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
