[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for beemesh"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
anyhow = "1.0.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[[bin]]
name = "beectl"
path = "src/main.rs"