[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for beemesh"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
anyhow = "1.0.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
base64 = "0.21"
dirs = "4.0"
aes-gcm = "0.10"
kyber-rust = "0.2"
saorsa-pqc = "0.3"
crypto = { path = "../crypto" }
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "beectl"
path = "src/main.rs"