[package]
name = "cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for beemesh"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
reqwest = {  workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
saorsa-pqc = { workspace = true }
crypto = { path = "../crypto" }
protocol = { path = "../protocol" }
scheduler = { path = "../scheduler" }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
flatbuffers = "23"

[[bin]]
name = "beectl"
path = "src/main.rs"
