[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "Crypto parts of Beemesh"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
anyhow = "1.0.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
base64 = "0.21"
dirs = "4.0"
aes-gcm = "0.10"
saorsa-pqc = "0.3"
log = "0.4"
zeroize = "1.5"
once_cell = "1.20"
sha2 = "0.10"
hex = "0.4"
libp2p = { version = "0.56", features = ["macros"] }
thiserror = "1.0"
