[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
description = "Crypto parts of Beemesh"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
aes-gcm = "0.10"
saorsa-pqc = { workspace = true }
log = { workspace = true }
zeroize = "1.5"
once_cell = { workspace = true }
libp2p = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
