[package]
name = "machine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
libp2p = { version = "0.56", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "request-response", "kad"] }
tracing-subscriber = "0.3.19"
futures = "0.3.30"
clap = { version = "4", features = ["derive"] }
once_cell = "1.20"
tokio-stream = "0.1"
axum-server = "0.4"
protocol = { path = "../protocol" }
uuid = { version = "1", features = ["v4"] }
flatbuffers = "25.2.10"
base64 = "0.21"
async-trait = "0.1"
crypto = { path = "../crypto" }
log = "0.4"
env_logger = "0.10"
saorsa-pqc = "0.3"
dirs = "4.0"
anyhow = "1.0"
rand = "0.8"
