[package]
name = "machine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
libp2p = { workspace = true }
tracing-subscriber = "0.3.19"
futures = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
once_cell = { workspace = true }
tokio-stream = "0.1"
axum-server = "0.4"
protocol = { path = "../protocol" }
uuid = { workspace = true }
flatbuffers = "25.2.10"
base64 = { workspace = true }
async-trait = "0.1"
crypto = { path = "../crypto" }
scheduler = { path = "../scheduler" }
log = { workspace = true }
env_logger = { workspace = true }
saorsa-pqc = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
