[package]
name = "machine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["env"] }
once_cell = { workspace = true }
protocol = { workspace = true }
uuid = { workspace = true }
flatbuffers = { workspace = true }
base64 = { workspace = true }
async-trait = "0.1"
crypto = { workspace = true }
scheduler = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
saorsa-pqc = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
