[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
description = "Protocol IPC for beemesh machine plane"
build = "build.rs"

[dependencies]
flatbuffers = "25.2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
anyhow = "1.0"
crypto = { path = "../crypto" }
