[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
description = "Protocol IPC for beemesh machine plane"
build = "build.rs"

[dependencies]
flatbuffers = "25.2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
crypto = { path = "../crypto" }
