[package]
name = "integration"
version = "0.1.0"
edition = "2024"
description = "Integration tests for beemesh machine plane"
publish = false

[dependencies]
machine = { path = "../machine" }
crypto = { path = "../crypto" }
scheduler = { path = "../scheduler" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
serial_test = "3.0"